--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                     <!-- right buttons -->
                     <div class="mil-top-panel-buttons">
-                        <a href= "contato.html" target="_blank" class="mil-button mil-sm">Faça um orçamento</a>
+                        <a href= "contato.html" target="_blank" id="orcamento" class="mil-button mil-sm">Faça um orçamento</a>
                         <div class="mil-menu-btn">
                             <span></span>
                         </div>
