--- a/contato.html
+++ b/contato.html
@@ -100,8 +100,8 @@
         <h1>Entre em contato conosoco</h1>
         <p>Acesse em um dos botões para falar com a gente.</p>
         <p>tech For Web - Transformando cliques em clientes</p>
-        <a href="https://www.instagram.com/techforweb/" class="mil-button" style="background-color: rgb(212, 173, 0); color:#fff;">Acesse nosso instagram</a>
-        <a href="https://wa.me/5514996145415" class="mil-button">Pedir orçamento (WhatsApp)</a>
+        <a href="https://www.instagram.com/techforweb/" target="_blank" class="mil-button" style="background-color: rgb(212, 173, 0); color:#fff;">Acesse nosso instagram</a>
+        <a href="https://wa.me/5514996145415" target="_blank" class="mil-button">Pedir orçamento (WhatsApp)</a>
     </div>
     
 
