--- a/metodo-clonagem-zero.html
+++ b/metodo-clonagem-zero.html
@@ -10,6 +10,18 @@
     <meta name="keywords" content="bootstrap 5, Social Media, Web Design, Sites, O segredo de como proteger o seu WhatsApp" />
     <meta name="author" content="T4W - Tech For Web" />
 
+    <!-- Meta tags Open Graph para Facebook, LinkedIn e outras redes sociais -->
+    <meta property="og:title" content="Método Clonagem Zero" />
+    <meta property="og:description" content="Se proteja. Não tenha seu WhatsApp Clonado" />
+    <meta property="og:image" content="img/photo/metodo.png" />
+    <meta property="og:url" content="https://www.techforweb.com.br/metodo-clonagem-zero.html" />
+    <meta property="og:type" content="website" />
+
+    <!-- Meta tags para Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Método Clonagem Zero" />
+    <meta name="twitter:description" content="Se proteja. Não tenha seu WhatsApp Clonado" />
+    <meta name="twitter:image" content="img/photo/metodo.png" />
      <!-- Site favicon -->
      <link rel="shortcut icon" href="img/fiveicon/favicon.ico" />
      <link rel="apple-touch-icon" sizes="180x180" href="img/fiveicon/apple-touch-icon.png">
