--- a/services.html
+++ b/services.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="pt-BR">
 
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="T4W - Technology web" />
-    <meta name="keywords" content="bootstrap 5, Cocial Media, Web Design, Sites" />
+    <meta name="description" content="Conheça nossos serviços especializados: Social Media Design, Gestão de Tráfego Pago e Desenvolvimento Full Stack. Soluções completas para seu negócio digital." />
+    <meta name="keywords" content="social media design, gestão tráfego pago, desenvolvimento full stack, marketing digital, sites profissionais" />
     <meta name="author" content="T4W - Tech For Web" />
 
      <!-- Site favicon -->
@@ -30,8 +30,10 @@
     <link rel="stylesheet" href="css/plugins/magnific-popup.css">
     <!-- t4w css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- optimizations css -->
+    <link rel="stylesheet" href="css/optimizations.css">
     <!-- page name -->
-    <title>Tech For Web </title>
+    <title>Serviços - Tech For Web | Social Media, Tráfego Pago e Desenvolvimento</title>
          <!-- Google tag (gtag.js) -->
          <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E59Q5P9NZ"></script>
          <script>
