--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <link rel="stylesheet" href="css/plugins/magnific-popup.css">
     <!-- t4w css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- optimizations css -->
+    <link rel="stylesheet" href="css/optimizations.css">
     <!-- page name -->
     <title>Tech For Web | Gestão de Tráfego Pago e Social Media </title>
     <!-- Google tag (gtag.js) event - delayed navigation helper -->
@@ -84,8 +86,6 @@
  
          gtag('config', 'G-0E59Q5P9NZ');
          </script>
-         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-0E59Q5P9NZ"></script>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -609,6 +609,8 @@
     <script src="js/plugins/ScrollTrigger.min.js"></script>
     <!-- magnific js -->
     <script src="js/plugins/magnific-popup.js"></script>
+    <!-- SEO optimization js -->
+    <script src="js/seo-config.js"></script>
     <!-- project js -->
     <script src="js/main.js"></script>
 
